saving some time/energy with currentUsername

--- a/HotdAmn/en.lproj/Themes/Default.hdtheme/Default.html
+++ b/HotdAmn/en.lproj/Themes/Default.hdtheme/Default.html
@@ -4,6 +4,7 @@
     </avatar>
     <username>
         %username%
+        <span class="corner">hi</span>
     </username>
 </avatar-container>
 <msg>%msg%</msg>
