new way of looking at active and inactive tabs

--- a/HotdAmn/en.lproj/Themes/Simple.hdtheme/Simple.html
+++ b/HotdAmn/en.lproj/Themes/Simple.hdtheme/Simple.html
@@ -1,1 +1,1 @@
-<time>%timestamp%</time> <username>&lt;<avatar><img src="%avatar%" width="16" height="16" /></avatar>%username%&gt;</username> <msg>%msg%</msg>
+<time>%timestamp%</time> <username><span>&lt;</span><avatar><img src="%avatar%" width="16" height="16" /></avatar>%username%<span>&gt;</span></username> <msg>%msg%</msg>
